logger and app insights

--- a/RESTFunctions/appsettings.json
+++ b/RESTFunctions/appsettings.json
@@ -1,7 +1,10 @@
 {
+  "ApplicationInsights": {
+    "InstrumentationKey": "5164dd06-7613-4668-b19a-ee733264f9d1"
+  },
   "Logging": {
     "LogLevel": {
-      "Default": "Warning"
+      "Default": "Information"
     }
   },
   "AuthCert": {
