--- a/RESTFunctions/RESTFunctions.csproj
+++ b/RESTFunctions/RESTFunctions.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <!--<PackageReference Include="Microsoft.AspNetCore.Authentication.AzureAD.UI" Version="5.0.2" />-->
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.17.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.AzureAD.UI" Version="3.1.3" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.3" />
     <PackageReference Include="Microsoft.Identity.Client" Version="4.25.0" />
