--- a/RESTFunctions/appsettings.Development.json
+++ b/RESTFunctions/appsettings.Development.json
@@ -1,18 +1,22 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Debug",
+      "Default": "Information",
       "System": "Information",
       "Microsoft": "Information"
-    },
-    "AzureAD": {
-      "TenantId": "d06b10f6-c712-40c1-9617-cec9c7d02390",
-      "ClientId": "242d5468-6b57-471e-a372-540636b8d066",
-      "Domain": "b2cmultitenant.onmicrosoft.com"
-    },
-    "PolicyPrefix": "mt",
-    "RestApp": "B2CRestAPIs",
-    "RestUrl": "https://localhost:44353",
-    "AllowedHosts": "*"
-  }
+    }
+  },
+  "ApplicationInsights": {
+    "InstrumentationKey": "5164dd06-7613-4668-b19a-ee733264f9d1"
+  },
+  "AzureAD": {
+    "TenantId": "d06b10f6-c712-40c1-9617-cec9c7d02390",
+    "ClientId": "242d5468-6b57-471e-a372-540636b8d066",
+    "Domain": "b2cmultitenant.onmicrosoft.com"
+  },
+  "PolicyPrefix": "mt",
+  "RestApp": "B2CRestAPIs",
+  "RestUrl": "https://localhost:44353",
+  "AllowedHosts": "*"
+
 }
