--- a/RESTFunctions/appsettings.Development.json
+++ b/RESTFunctions/appsettings.Development.json
@@ -1,22 +1,63 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "System": "Information",
-      "Microsoft": "Information"
-    }
-  },
+  //"Logging": {
+  //  "LogLevel": {
+  //    "Default": "Information"
+  //  }
+  //},
   "ApplicationInsights": {
     "InstrumentationKey": "5164dd06-7613-4668-b19a-ee733264f9d1"
   },
+  "Logging": {
+    "ApplicationInsights": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft": "Information"
+      }
+    },
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Information",
+      "Microsoft.Hosting.Lifetime": "Information"
+    }
+  },
   "AzureAD": {
-    "TenantId": "d06b10f6-c712-40c1-9617-cec9c7d02390",
+    "TenantId": "38c2641c-a150-4e2a-950e-6ea3f22ca6a1",
     "ClientId": "242d5468-6b57-471e-a372-540636b8d066",
     "Domain": "b2cmultitenant.onmicrosoft.com"
   },
   "PolicyPrefix": "mt",
-  "RestApp": "B2CRestAPIs",
-  "RestUrl": "https://localhost:44353",
+  "RestApp": "dv-b2cmtapi-wus-app",
+  "RestUrl": "https://dv-b2cmtapi-wus-app.azurewebsites.net",
   "AllowedHosts": "*"
 
 }
+
+
+
+//{
+//  "ApplicationInsights": {
+//    "InstrumentationKey": "5164dd06-7613-4668-b19a-ee733264f9d1"
+//  },
+//  "Logging": {
+//    "LogLevel": {
+//      "Default": "Information"
+//    }
+//  },
+//  "AzureAD": {
+//    "TenantId": "38c2641c-a150-4e2a-950e-6ea3f22ca6a1",
+//    "ClientId": "06413c75-757a-4db5-9465-f9e87d76e95e",
+//    "Domain": "saascomms.onmicrosoft.com"
+//  },
+//  "Invitation": {
+//    "Domain": "saascomms.onmicrosoft.com",
+//    "ClientId": "06413c75-757a-4db5-9465-f9e87d76e95e",
+//    "InvitationPolicy": "B2C_1A_MTInvitation",
+//    "Issuer": "dv-b2cmtapi-wus-app",
+//    "Audience": "dv-b2cmtapi-wus-app",
+//    "ValidityHours": 72,
+//    "RedirectPath": "/members/signin-redeem"
+//  },
+//  "RestApp": "b2cmtapi",
+//  "RestUrl": "https://dv-b2cmtapi-wus-app.azurewebsites.net",
+//  "AllowedHosts": "*"
+//}
