--- a/RESTFunctions/appsettings.json
+++ b/RESTFunctions/appsettings.json
@@ -2,31 +2,89 @@
   "ApplicationInsights": {
     "InstrumentationKey": "5164dd06-7613-4668-b19a-ee733264f9d1"
   },
+  //"Logging": {
+  //  "LogLevel": {
+  //    "Default": "Information"
+  //  }
+  //},
   "Logging": {
+    "ApplicationInsights": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft": "Information"
+      }
+    },
     "LogLevel": {
-      "Default": "Information"
+      "Default": "Information",
+      "Microsoft": "Information",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
   "AuthCert": {
-    "thumbprint": "20c7deb09c672e589d325eb1bef3e301a92c0d1f",
-    "issuer": "CN=b2crestapis.b2cmultitenant.onmicrosoft.com",
-    "subject": "CN=b2crestapis.b2cmultitenant.onmicrosoft.com"
+    "thumbprint": "3DCC94D409712498445262328BDE276303AA81D8",
+    "issuer": "CN=dv-b2cmtapi-wus-app.saascomms.onmicrosoft.com",
+    "subject": "CN=dv-b2cmtapi-wus-app.saascomms.onmicrosoft.com"
   },
   "AllowedHosts": "*",
   "B2C": {
-    "TenantName": "b2cmultitenant",
-    "TenantId": "d06b10f6-c712-40c1-9617-cec9c7d02390",
-    "ClientId": "62e7e7ea-a2cb-42e2-b356-f53424c67c4e",
-    "Policy": "B2C_1A_MTsusi2"
+    "TenantName": "saascomms",
+    "TenantId": "38c2641c-a150-4e2a-950e-6ea3f22ca6a1",
+    "ClientId": "8291ab18-dc81-4ec3-8f92-03260c0222ee",
+    "Policy": "b2c_1a_MTsusi2"
   },
   "ClientCreds": {
     "Instance": "https://login.microsoftonline.com/",
-    "TenantId": "d06b10f6-c712-40c1-9617-cec9c7d02390",
-    "ClientId": "08e86a26-1465-4eca-833a-48a08e7f1018",
-    "RedirectUri": "https://b2crestapis.azurewebsites.net"
+    "TenantId": "38c2641c-a150-4e2a-950e-6ea3f22ca6a1",
+    "ClientId": "adaecaff-4574-4939-ad86-8ac503d38b0f",
+    "RedirectUri": "https://dv-b2cmtapi-wus-app.azurewebsites.net",
+    "ClientSecret": "sFV4wkQ4k+3YablOsIe1OlsO+6tnSsXwXUjSPHyq8tI="
   },
   "Invitation": {
     "Policy": "B2C_1A_MTInvitation",
-    "ValidityMinutes": 60
-  }
+    "ValidityMinutes": 360,
+    "RedeemReplyUrl": "members/redeem",
+    "SigningKey": "QAxwp+tZwBr5E7of2fYkKGlSe7DRzSMqFiFyZANPwDg="
+  },
+  "WEBSITE_LOAD_CERTIFICATES": "3DCC94D409712498445262328BDE276303AA81D8"
 }
+
+//{
+//  "ApplicationInsights": {
+//    "InstrumentationKey": "5164dd06-7613-4668-b19a-ee733264f9d1"
+//  },
+//  "Logging": {
+//    "LogLevel": {
+//      "Default": "Information"
+//    }
+//  },
+//  "AuthCert": {
+//    "thumbprint": "1FF5A6732FBA89D83D60296CCA9B34F398FA4A26",
+//    "issuer": "CN=dv-b2cmtapi-wus-app.saascomms.onmicrosoft.com",
+//    "subject": "CN=dv-b2cmtapi-wus-app.saascomms.onmicrosoft.com"
+//  },
+//  "AzureAD": {
+//    "TenantId": "38c2641c-a150-4e2a-950e-6ea3f22ca6a1",
+//    "ClientId": "06413c75-757a-4db5-9465-f9e87d76e95e",
+//    "Domain": "saascomms.onmicrosoft.com"
+//  },
+//  "PolicyPrefix": "mt",
+//  "RestApp": "dv-b2cmtapi-wus-app",
+//  "RestUrl": "https://dv-b2cmtapi-wus-app.azurewebsites.net",
+//  "AllowedHosts": "*",
+//  "B2C": {
+//    "TenantName": "b2cmultitenant",
+//    "TenantId": "38c2641c-a150-4e2a-950e-6ea3f22ca6a1",
+//    "ClientId": "06413c75-757a-4db5-9465-f9e87d76e95e",
+//    "Policy": "B2C_1A_MTsusi2"
+//  },
+//  "ClientCreds": {
+//    "Instance": "https://login.microsoftonline.com/",
+//    "TenantId": "38c2641c-a150-4e2a-950e-6ea3f22ca6a1",
+//    "ClientId": "06413c75-757a-4db5-9465-f9e87d76e95e",
+//    "RedirectUri": "https://dv-b2cmtapi-wus-app.azurewebsites.net"
+//  },
+//  "Invitation": {
+//    "Policy": "B2C_1A_MTInvitation",
+//    "ValidityMinutes": 60
+//  }
+//}
